tests/specs/check/module_not_found/main.out
Download http://localhost:4545/remote.ts
Check file:///[WILDLINE]/module_not_found/main.ts
TS2307 [ERROR]: Cannot find module 'file:///[WILDLINE]/other.js'.
    at file:///[WILDLINE]/main.ts:1:22

TS2307 [ERROR]: Cannot find module 'http://localhost:4545/remote.ts'.
    at file:///[WILDLINE]/main.ts:2:24

Found 2 errors.

error: Type checking failed.
